src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwP0.25-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: P0.25\ndefault window height: U\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
